k8s/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-nextjs-app
  namespace: default  # 可选，但推荐指定
spec:
  hosts:
  - my-nextjs-app
  http:
  - route:
    - destination:
        host: my-nextjs-app
        subset: stable
      weight: 90
    - destination:
        host: my-nextjs-app
        subset: canary
      weight: 10
